# atcoder-environment

./: .bashrc  .envrc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
contests/ABC249/: A.py  B.py
contests/abc250/A/: main.py  metadata.json
contests/abc250/B/: in_3.txt  in_4.txt  main.py  metadata.json  out_1.txt  out_2.txt  out_3.txt
contests/abc250/C/: main.py  metadata.json
contests/abc250/D/: main.py  main_improve.py  metadata.json
contests/abc250/E/: in_1.txt  main.py  metadata.json  out_1.txt
contests/abc250/Ex/: in_1.txt  main.py  metadata.json
contests/abc250/F/: in_1.txt  in_2.txt  in_3.txt  metadata.json  out_2.txt  out_3.txt
contests/abc250/G/: in_1.txt  in_2.txt  in_3.txt  main.py  metadata.json  out_3.txt
contests/abc251/A/: main.py  metadata.json  out_1.txt
contests/abc251/B/: in_1.txt  in_2.txt  in_3.txt  in_4.txt  main.py  metadata.json
contests/abc251/C/: in_1.txt  in_2.txt  in_3.txt  main.py  metadata.json
contests/abc251/D/: main.py  metadata.json
contests/abc251/E/: main.py  metadata.json
contests/abc251/Ex/: in_1.txt  in_2.txt  in_3.txt  main.py  metadata.json  out_1.txt  out_3.txt
contests/abc251/F/: in_1.txt  in_2.txt  main.py  metadata.json  out_1.txt  out_2.txt
contests/abc251/G/: in_1.txt  in_2.txt  main.py  metadata.json  out_1.txt  out_2.txt
contests/abc252/A/: main.py  metadata.json
docker/: .bashrc  Dockerfile  docker-compose.yml
tools/commands/: ac_gen  ac_open  ac_submit  ac_test
tools/template/: template.cpp  template.py
training/: README.md
(+2773 files in other folders)
