[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["sakagami0615 <sakagami0615@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
atcoder-tools = "^2.14.0"
numpy = "^2.0.1"
markupsafe = "2.0.1"
ac-library-python = {git = "https://github.com/not522/ac-library-python"}
sortedcontainers = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
